--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,8 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/cfreedomc/cfreedomc.github.io.git
+  #repo: https://github.com/cfreedomc/cfreedomc.github.io.git
+  repo: git@github.com:cfreedomc/cfreedomc.github.io.git
   branch: master
 
 
