optimize theme next

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Cfreedomc's Blog
+title: Cfreedomc
 subtitle:
 description:
 author: cfreedomc
